add home and our works sections

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -1,4 +1,8 @@
 @import 'variables';
+@import 'nav';
+@import '_section_home';
+@import '_section_services';
+@import 'section_our_works';
 
 * {
     margin: 0px;
