--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -20,11 +20,13 @@
     --gray-1: #333333;
     --gray-2: #4F4F4F;
     --gray-3: #828282;
+    --gray-4:  #BDBDBD;
     --gray-6: #F2F2F2;
 
     --bg-btn: #E0E0E0;
 
-    --blue: #2D9CDB;
+    --blue: #228ecc;
+    --blue-hover: #4eace1;
     --green: #27AE60;
     --red: #EB5757; 
 }
