add other pages

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -3,6 +3,9 @@
 @import '_section_home';
 @import '_section_services';
 @import 'section_our_works';
+@import 'section_team';
+@import 'section_quote';
+@import 'footer';
 
 * {
     margin: 0px;
