--- a/styles/scss/_section_our_works.scss
+++ b/styles/scss/_section_our_works.scss
@@ -17,24 +17,43 @@
     width: 540px;
     height: 540px;
     margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 150px;
+    z-index: -1;
 }
 
-.container {
-    border: 1px solid blue;
-    height: 725px;
-    width: 1150px;
-    margin-left: 0px;
+.container_main {
     display: flex;
-    justify-content: space-between;
-
+    justify-content: space-evenly;
+    gap: 0px;
 }
+
+.container_1 {
+    height: 1555px;
+    width: 600px;
+    position: relative;
+    right: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+.container_2 {
+    height: 1555px;
+    width: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: -150px;
+    position: relative;
+    right: 20px;
+} 
+
 
 .img_container {
-    border: 1px solid red;
-    margin-top: -400px;
-    margin-left: 90px;
-    width: 300px;
+    margin-top: 700px;
+    margin-left: 50px;
+    width: 400px;
     z-index: 2;
 
     .img_title {
@@ -60,5 +79,14 @@
     color: var(--blue);
     font-weight: 500;
     font-size: var(--paragraph1);
+    display: flex;
+    justify-content: end;
+    margin-right: 50px;
+    margin-top: -30px;
+    z-index: -1;
 
+    &:hover {
+        color: var(--blue);
+        cursor: pointer;
+    }
 }
