--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -51,6 +51,10 @@
     margin-left: 420px;
 }
 
+a.twitter {
+    margin-top: 4px;
+}
+
 .social_icon {
     color: var(--white);
     height: 6%;
@@ -111,4 +115,14 @@
     font-size: var(--paragraph4);
     line-height: 17px;
    
+}
+
+@media only screen and (min-width: 1920px) {
+    .icons {
+        justify-content: space-between;
+    }
+    .contact_box_footer {
+        margin-left: 1350px;
+    }
+    
 }
