--- a/styles/scss/_section_our_works.scss
+++ b/styles/scss/_section_our_works.scss
@@ -90,3 +90,9 @@
         cursor: pointer;
     }
 }
+
+@media only screen and (min-width: 1920px) {
+    .our_works  {
+        margin-left: 100px;
+    }
+}
