--- a/styles/scss/_section_services.scss
+++ b/styles/scss/_section_services.scss
@@ -118,3 +118,17 @@
         margin-left: 100px;
     }
 }
+
+@media (max-width: 480px) {
+    .services {
+        margin-top: 100px; 
+    }
+    .services_title {
+        
+        line-height: 36px;
+    }
+    .card_container  {
+        flex-direction: column;
+        margin-left: 50px;
+    }
+}
