--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -11,6 +11,8 @@
     --paragraph2: 18px;
     --paragraph3: 16px;
     --paragraph4: 14px;
+    --paragraph5: 12px;
+    --paragraph6: 10px;
 }
 
 //Colors
