--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -29,7 +29,11 @@
 
     --blue: #228ecc;
     --blue-hover: #4eace1;
+    --blue-ocean: #29526b;
+    --blue-navi: #212530;
     --green: #27AE60;
     --red: #EB5757; 
+    --red-light: #ea6e70;
+    --brown: #8f4c26;
 }
 
